--- a/charts/supabase/templates/functions/functions.config.yaml
+++ b/charts/supabase/templates/functions/functions.config.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- include "supabase.labels" . | nindent 4 }}
 data:
   index.ts: |
-    {{- if .Values.customRootFunction }}
+    {{- if .Values.functions.customRootFunction }}
     {{ .Values.customRootFunction | nindent 4 }}
     {{- else }}
     import { serve } from 'https://deno.land/std@0.131.0/http/server.ts'
