--- a/charts/supabase/values.yaml
+++ b/charts/supabase/values.yaml
@@ -1074,7 +1074,8 @@ functions:
   nodeSelector: {}
   tolerations: []
   affinity: {}
-
+  customRootFunction: ""
+    
 # minio
 minio:
   enabled: false
