--- a/charts/supabase/templates/functions/deployment.yaml
+++ b/charts/supabase/templates/functions/deployment.yaml
@@ -5,6 +5,8 @@ metadata:
   name: {{ include "supabase.functions.fullname" . }}
   labels:
     {{- include "supabase.labels" . | nindent 4 }}
+  annotations:
+    checksum/config: {{ include (print $.Template.BasePath "/functions/functions.config.yaml") . | sha256sum }}
 spec:
   {{- if not .Values.functions.autoscaling.enabled }}
   replicas: {{ .Values.functions.replicaCount }}
